--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,28 +8,28 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_id"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginBottom="7dp"
         card_view:cardBackgroundColor="@color/background"
         card_view:cardCornerRadius="3dp">
 
-        <RelativeLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:gravity="start"
                     android:layout_marginLeft="10dp"
                     android:text="Название"
                     android:textColor="#7F7F7F"
@@ -37,43 +37,48 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Дата"
-                android:textColor="#7F7F7F"
-                android:textSize="16dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Сумма"
-                android:textColor="#7F7F7F"
-                android:textSize="16dp" />
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:text="Дата"
+                    android:layout_weight="1"
+                    android:textColor="#7F7F7F"
+                    android:textSize="16dp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/selected_overlay"
-            android:background="@color/primary_foreground"
-            android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_weight="1"
+                    android:layout_marginRight="10dp"
+                    android:text="50"
+                    android:textColor="#7F7F7F"
+                    android:textSize="16dp" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/comment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:text="Комментарий"
-            android:textColor="#7F7F7F"
-            android:textSize="16dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:layout_marginLeft="10dp"
+                    android:text="Комментарий"
+                    android:textColor="#7F7F7F"
+                    android:textSize="16dp" />
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</LinearLayout>
