--- a/app/src/main/res/layout/transfer_item.xml
+++ b/app/src/main/res/layout/transfer_item.xml
@@ -14,79 +14,58 @@
         card_view:cardBackgroundColor="@color/background"
         card_view:cardCornerRadius="3dp">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="55dp">
 
-            <LinearLayout
+            <ImageView
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:id="@+id/user_icon"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/gray_circle" />
+
+            <TextView
+                android:id="@+id/from_category"
+                android:text="Марина кашелек"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:textColor="#7F7F7F"
+                android:textSize="18sp"
+                android:layout_marginLeft="55dp" />
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Чагарин Иван"
-                    android:textColor="#7F7F7F"
-                    android:textSize="16dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/price"
+                android:text="50"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:textColor="#d75b5b"
+                android:textSize="24dp" />
 
-                <TextView
-                    android:id="@+id/from_category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Марина кашелек"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="#7F7F7F"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="50"
-                    android:textColor="#7F7F7F"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/to_category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:layout_marginRight="10dp"
-                    android:text="Ваня наличные"
-                    android:textColor="#7F7F7F"
-                    android:textSize="16dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/to_category"
+                android:text="Ваня наличные"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_gravity="end|bottom"
+                android:layout_marginRight="10dp"
+                android:textColor="#6fa2c4"
+                android:textSize="18dp" />
 
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Дата"
-                    android:textColor="#7F7F7F"
-                    android:textSize="16dp" />
+            <TextView
+                android:id="@+id/date"
+                android:text="07/07/08"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|bottom"
+                android:layout_marginRight="10dp"
+                android:textColor="#6bac3c"
+                android:layout_marginLeft="55dp"
+                android:textSize="14dp" />
 
-            </LinearLayout>
-        </LinearLayout>
+        </FrameLayout>
+
     </android.support.v7.widget.CardView>
 </RelativeLayout>
